# terraria_clone

./: .gitignore  CMakeLists.txt
src/: Collision.cpp  Collision.h  Game.cpp  Game.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
src/ECS/: BlockComponent.h  ColliderComponent.h  Components.h  ECS.h  GravityComponent.h  KeyboardController.h  SpriteComponent.h  TransformComponent.h
src/ECS/MovementComponents/: JumpComponent.h
src/blocks/: BlocksManager.cpp  BlocksManager.h
src/player/: PlayerManager.cpp  PlayerManager.h
